@@ -1,26 +1,26 @@
-package _0101_0150._127_Word_Ladder;
+package google._127_Word_Ladder;
 
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-
 /**
- * @author Zhiwei.Xin
- * @version 1.0 on 6/29/2017.
+ * @author jacka
+ * @version 1.0 on 4/25/2021
  */
-class SolutionTest {
+class SolutionITest {
 
   @ParameterizedTest
   @MethodSource("solutionStream")
   void testOnlineCase(Solution solution) {
     final String beginWord = "hit";
     final String endWord = "cog";
-    List<String> wordList = List.of("hot", "dot", "dog", "lot", "log", "cog");
+    List<String> wordList = Arrays.asList("hot", "dot", "dog", "lot", "log", "cog");
     assertEquals(5, solution.ladderLength(beginWord, endWord, wordList));
   }
 
@@ -29,14 +29,13 @@ class SolutionTest {
   void testOnlineCase1(Solution solution) {
     final String beginWord = "hit";
     final String endWord = "cog";
-    List<String> wordList = List.of("hot", "dot", "dog", "lot", "log");
+    List<String> wordList = Arrays.asList("hot", "dot", "dog", "lot", "log");
     assertEquals(0, solution.ladderLength(beginWord, endWord, wordList));
   }
 
   static Stream<Solution> solutionStream() {
     return Stream.of(
-        new BfsSolution(),
-        new BidirectionBfsSolution()
+        new SolutionI()
     );
   }
 }
